🚀 Digital Twin T1D SDK v2.0 - Complete Production Release

--- a/pytest.ini
+++ b/pytest.ini
@@ -5,7 +5,7 @@ python_classes = Test*
 python_functions = test_*
 addopts = 
     --verbose
-    --cov=digital_twin_t1d
+    --cov=core --cov=data --cov=models --cov=sdk --cov=utils --cov=agents --cov=intelligence --cov=optimization
     --cov-report=html
     --cov-report=term-missing
     --cov-report=xml
@@ -23,4 +23,4 @@ markers =
 filterwarnings =
     ignore::UserWarning
     ignore::DeprecationWarning
-    ignore::PendingDeprecationWarning 
+    ignore::PendingDeprecationWarning
