docs: Update changelog, version, README for v1.1.0 (Phase B)
Updated CHANGELOG.md with Phase A & B changes. Bumped version in pyproject.toml to 1.1.0. Added README snippet for contextual_predict and use_agent. Updated pytest.ini to reduce warnings and changed pandas frequency '5T' to '5min'.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,9 +1,9 @@
-[tool:pytest]
+[pytest]
 testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-addopts = 
+addopts =
     --verbose
     --cov=core --cov=data --cov=models --cov=sdk --cov=utils --cov=agents --cov=intelligence --cov=optimization
     --cov-report=html
@@ -11,16 +11,24 @@ addopts =
     --cov-report=xml
     --cov-fail-under=80
     --strict-markers
-    --disable-warnings
     --tb=short
+    -ra
+    -q
 markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
-    integration: marks tests as integration tests
+    integration: long-running integration tests # Updated description
     unit: marks tests as unit tests
     clinical: marks tests requiring clinical validation
     privacy: marks tests for privacy-preserving features
     safety: marks tests for safety-critical features
 filterwarnings =
+    # Πιο καθαρά logs
+    ignore:datetime\\.datetime\\.utcfromtimestamp:DeprecationWarning # Escaped dot
+    ignore:Non-invertible starting MA parameters:UserWarning
+    ignore:Non-stationary starting autoregressive parameters:UserWarning
+    ignore:Maximum Likelihood optimization failed:statsmodels.tools.sm_exceptions.ConvergenceWarning
+    # Keep general ignores for now, can be removed if too broad
     ignore::UserWarning
     ignore::DeprecationWarning
     ignore::PendingDeprecationWarning
+asyncio_default_fixture_loop_scope = function
