--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ tensorflow>=2.8.0
 
 # Deep Learning για Advanced Models
 transformers>=4.20.0
-mamba-ssm>=1.0.0  # State Space Models
+mamba-ssm==1.2.0  # State Space Models - Pinned to v1.2.0 to attempt macOS CI fix
 torchdiffeq>=0.2.3  # Neural ODEs
 
 # Time Series Analysis
