fix(ci): Refine pytest.ini and address Bandit MD5 warning
Moved comment in pytest.ini markers section to its own line for robustness. Updated hashlib.md5 call in sdk/performance.py with usedforsecurity=False to address Bandit warning B324.

--- a/pytest.ini
+++ b/pytest.ini
@@ -6,7 +6,8 @@ python_functions = test_*
 addopts = --verbose --cov=core --cov=data --cov=models --cov=sdk --cov=utils --cov=agents --cov=intelligence --cov=optimization --cov-report=html --cov-report=term-missing --cov-report=xml --cov-fail-under=15 --strict-markers --tb=short -ra -q
 markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
-    integration: long-running integration tests # Updated description
+    # Updated description for integration tests
+    integration: long-running integration tests
     unit: marks tests as unit tests
     clinical: marks tests requiring clinical validation
     privacy: marks tests for privacy-preserving features
