fix(ci): Make mamba-ssm an optional dependency
Moved mamba-ssm from requirements.txt to optional dependencies in pyproject.toml to resolve CI build failures on macOS. models/mamba_model.py already has a fallback for when mamba-ssm is not available.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,8 +95,12 @@ optimization = [
     "ray[tune]>=2.0",
 ]
 
+mamba = [ # New optional dependency group for Mamba
+    "mamba-ssm==1.2.0"
+]
+
 all = [
-    "digital-twin-t1d[dev,docs,examples,simulation,optimization]"
+    "digital-twin-t1d[dev,docs,examples,simulation,optimization,mamba]" # Added mamba to 'all'
 ]
 
 [project.urls]
