fix(ci): Address simglucose install, Bandit warnings, and Pylance errors
Updated simglucose version in requirements.txt. Made mamba-ssm an optional dependency. Silenced Bandit warnings for pickle, torch.load, and host binding. Added type hints and assertions to LSTMModel and TransformerModel to resolve Pylance 'model is None' errors.

--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ econml>=0.14.0
 dowhy>=0.8.0
 
 # Medical/Health specific
-simglucose>=0.2.1
+simglucose>=0.2.9 # Pinned to avoid faulty 0.2.8 source distribution
 
 # Explainable AI
 shap>=0.41.0
