--- a/requirements.in
+++ b/requirements.in
@@ -1,87 +1,97 @@
-# Core data science
-    numpy>=1.21.0
-    pandas>=1.3.0
-    scipy>=1.7.0
-    scikit-learn==1.3.2 # Pinned due to CI build issues with older versions
+# Βασικές βιβλιοθήκες για Scientific Computing
+numpy>=1.21.0
+pandas>=1.3.0
+scipy>=1.7.0
+matplotlib>=3.5.0,<3.8.0 # Constrained for Py3.8 contourpy compatibility
+seaborn>=0.11.0
+plotly>=5.0.0
 
-    # Deep learning
-    torch>=1.10.0
-    # torchvision>=0.11.0 # Often comes with torch or can be added if specific features used
-    tensorflow>=2.16.0 # Allow any 2.16.x or newer compatible version
+# Machine Learning frameworks
+scikit-learn==1.3.2 # Pinned
+torch>=1.10.0
+tensorflow-cpu>=2.16.0 # Using tensorflow-cpu for broader compatibility
 
-    # Time series & forecasting
-    statsmodels>=0.13.0
-    prophet==1.1.5 # Pinned to resolve pystan build issues
-    pmdarima>=1.8.0
+# Deep Learning για Advanced Models
+transformers>=4.20.0
+# mamba-ssm (State Space Models)
+mamba-ssm-cpu>=1.1.1,<1.11.0 ; python_version < "3.12" and platform_system == "Windows"  # CPU for Windows, Py < 3.12
+mamba-ssm>=1.1.1,<1.11.0     ; python_version < "3.12" and platform_system != "Windows"  # GPU/CPU for Linux/Mac, Py < 3.12. Handles non-Windows.
+torchdiffeq>=0.2.3  # Neural ODEs
 
-    # Reinforcement Learning
-    stable-baselines3>=1.6.0
-    gymnasium>=0.26.0 # Preferred over gym
+# Time Series Analysis
+statsmodels>=0.13.0
+prophet==1.1.5 # Pinned
+pmdarima>=1.8.0
 
-    # Optimization
-    pymoo>=0.6.0
-    optuna>=3.0.0
-    hyperopt>=0.2.0
+# Reinforcement Learning
+stable-baselines3>=1.6.0
+gymnasium>=0.26.0
+# gym>=0.21.0 # Prefer gymnasium, gym is now an optional dep in pyproject.toml
 
-    # Causal Inference
-    econml>=0.14.0
-    dowhy>=0.8.0
+# Optimization
+pymoo>=0.6.0
+optuna>=3.0.0
+hyperopt>=0.2.0
 
-    # Medical/Health specific
-    simglucose>=0.2.9 # Pinned to avoid faulty 0.2.8
+# Causal Inference
+econml>=0.14.0
+dowhy>=0.8.0
 
-    # Explainable AI
-    shap==0.40.0 # Pinned to resolve conflict with econml 0.14.0
-    lime>=0.2.0
+# Medical/Health specific
+simglucose>=0.2.9 # Pinned from previous fixes
 
-    # Real-time και Deployment
-    fastapi>=0.85.0
-    uvicorn>=0.18.0
-    redis>=4.0.0
-    celery>=5.2.0
+# Explainable AI
+shap==0.40.0 # Pinned
+lime>=0.2.0
 
-    # Visualization και Monitoring
-    matplotlib>=3.5.0,<3.9.0 # Constrain to avoid forcing contourpy >1.2.1 (for py3.8 compat)
-    seaborn>=0.11.0
-    plotly>=5.0.0
-    wandb>=0.13.0
-    tensorboard>=2.10.0 # Note: tensorflow pulls in a compatible tensorboard
-    dash>=2.6.0
-    streamlit>=1.12.0
+# Real-time και Deployment
+fastapi>=0.85.0
+uvicorn>=0.18.0
+redis>=4.0.0
+celery>=5.2.0
 
-    # Data Processing
-    h5py>=3.7.0
-    pyarrow>=9.0.0
-    openpyxl>=3.0.0
+# Visualization και Monitoring
+wandb>=0.13.0
+tensorboard>=2.10.0 # tensorflow-cpu will pull a compatible version
+dash>=2.6.0
+streamlit>=1.12.0
 
-    # Utilities
-    tqdm>=4.64.0
-    joblib>=1.1.0
-    click==8.1.7 # Pin to a version compatible with Python 3.8+
-    python-dotenv>=0.20.0
-    pydantic>=1.10.0 # FastAPI uses this heavily
+# Data Processing
+h5py>=3.7.0
+pyarrow>=9.0.0
+openpyxl>=3.0.0
 
-    # Medical Standards
-    pydicom>=2.3.0
-    hl7>=0.3.12
+# Utilities
+tqdm>=4.64.0
+joblib>=1.1.0
+click==8.1.7 # Pinned for Py3.8+ compatibility
+python-dotenv>=0.20.0
+pydantic>=1.10.0
 
-    # Performance Optimization
-    numba>=0.56.0
-    aioredis>=2.0.0
-    psutil>=5.9.0
+# Medical Standards
+pydicom>=2.3.0  # Medical imaging
+hl7>=0.3.12     # Health data exchange
 
-    # Dashboard specific
-    dash-bootstrap-components>=1.2.0
-    dash-daq>=0.5.0
+# Performance Optimization
+numba>=0.56.0  # JIT compilation
+aioredis>=2.0.0  # Async Redis
+psutil>=5.9.0  # System monitoring
 
-    # Additional ML/DL
-    einops>=0.6.0
-    accelerate>=0.20.0 # For HuggingFace Transformers, PyTorch
+# Dashboard
+dash-bootstrap-components>=1.2.0
+dash-daq>=0.5.0
 
-    # API Development
-    httpx>=0.24.0
-    python-multipart>=0.0.6
+# Additional ML/DL
+einops>=0.6.0  # Tensor operations
+accelerate>=0.20.0  # HuggingFace accelerate
 
-    # Plugin System
-    importlib-metadata>=6.0.0; python_version < "3.10" # importlib.metadata is stdlib in 3.10+
-    pluggy>=1.0.0
+# API Development
+httpx>=0.24.0  # Async HTTP client
+python-multipart>=0.0.6  # File uploads
+
+# Plugin System
+importlib-metadata>=6.0.0; python_version < "3.10" # Conditional for older Python
+pluggy>=1.0.0
+
+# NOTE: Development/Testing dependencies like pytest, black, flake8, mypy
+# should be in a separate requirements-dev.in file.
