--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ absl-py==2.2.2
     # via
     #   keras
     #   tensorboard
+    #   tensorflow-cpu
     #   tensorflow-intel
 accelerate==1.7.0
     # via -r requirements.in
@@ -30,7 +31,9 @@ anyio==4.9.0
     #   httpx
     #   starlette
 astunparse==1.6.3
-    # via tensorflow-intel
+    # via
+    #   tensorflow-cpu
+    #   tensorflow-intel
 async-timeout==5.0.1
     # via aioredis
 attrs==25.3.0
@@ -141,10 +144,13 @@ filelock==3.18.0
     # via
     #   huggingface-hub
     #   torch
+    #   transformers
 flask==3.0.3
     # via dash
 flatbuffers==25.2.10
-    # via tensorflow-intel
+    # via
+    #   tensorflow-cpu
+    #   tensorflow-intel
 fonttools==4.58.0
     # via matplotlib
 fsspec==2025.5.1
@@ -154,7 +160,9 @@ fsspec==2025.5.1
 future==1.0.0
     # via hyperopt
 gast==0.6.0
-    # via tensorflow-intel
+    # via
+    #   tensorflow-cpu
+    #   tensorflow-intel
 gitdb==4.0.12
     # via gitpython
 gitpython==3.1.44
@@ -162,7 +170,9 @@ gitpython==3.1.44
     #   streamlit
     #   wandb
 google-pasta==0.2.0
-    # via tensorflow-intel
+    # via
+    #   tensorflow-cpu
+    #   tensorflow-intel
 grapheme==0.6.0
     # via alive-progress
 graphviz==0.20.3
@@ -172,6 +182,7 @@ greenlet==3.2.2
 grpcio==1.71.0
     # via
     #   tensorboard
+    #   tensorflow-cpu
     #   tensorflow-intel
 gym==0.9.4
     # via simglucose
@@ -198,7 +209,10 @@ httpcore==1.0.9
 httpx==0.28.1
     # via -r requirements.in
 huggingface-hub==0.32.1
-    # via accelerate
+    # via
+    #   accelerate
+    #   tokenizers
+    #   transformers
 hyperopt==0.2.7
     # via -r requirements.in
 idna==3.10
@@ -242,7 +256,9 @@ kombu==5.5.3
 lazy-loader==0.4
     # via scikit-image
 libclang==18.1.1
-    # via tensorflow-intel
+    # via
+    #   tensorflow-cpu
+    #   tensorflow-intel
 lightgbm==4.6.0
     # via econml
 lime==0.2.0.1
@@ -260,7 +276,7 @@ markupsafe==3.0.2
     #   jinja2
     #   mako
     #   werkzeug
-matplotlib==3.8.4
+matplotlib==3.7.5
     # via
     #   -r requirements.in
     #   causal-learn
@@ -351,10 +367,13 @@ numpy==1.26.4
     #   tensorboard
     #   tensorflow-intel
     #   tifffile
+    #   transformers
 openpyxl==3.1.5
     # via -r requirements.in
 opt-einsum==3.4.0
-    # via tensorflow-intel
+    # via
+    #   tensorflow-cpu
+    #   tensorflow-intel
 optree==0.15.0
     # via keras
 optuna==4.3.0
@@ -378,6 +397,7 @@ packaging==24.2
     #   statsmodels
     #   streamlit
     #   tensorflow-intel
+    #   transformers
 pandas==2.2.3
     # via
     #   -r requirements.in
@@ -425,6 +445,7 @@ protobuf==4.25.7
     # via
     #   streamlit
     #   tensorboard
+    #   tensorflow-cpu
     #   tensorflow-intel
     #   wandb
 psutil==7.0.0
@@ -480,6 +501,7 @@ pyyaml==6.0.2
     #   accelerate
     #   huggingface-hub
     #   optuna
+    #   transformers
     #   wandb
 redis==6.1.0
     # via -r requirements.in
@@ -487,13 +509,17 @@ referencing==0.36.2
     # via
     #   jsonschema
     #   jsonschema-specifications
+regex==2024.11.6
+    # via transformers
 requests==2.32.3
     # via
     #   dash
     #   gym
     #   huggingface-hub
     #   streamlit
+    #   tensorflow-cpu
     #   tensorflow-intel
+    #   transformers
     #   wandb
 retrying==1.3.4
     # via dash
@@ -504,7 +530,9 @@ rpds-py==0.25.1
     #   jsonschema
     #   referencing
 safetensors==0.5.3
-    # via accelerate
+    # via
+    #   accelerate
+    #   transformers
 scikit-image==0.25.2
     # via lime
 scikit-learn==1.3.2
@@ -537,6 +565,7 @@ scipy==1.15.3
     #   shap
     #   simglucose
     #   statsmodels
+    #   torchdiffeq
 scs==3.2.7.post2
     # via cvxpy
 seaborn==0.13.2
@@ -561,6 +590,7 @@ six==1.17.0
     #   python-dateutil
     #   retrying
     #   tensorboard
+    #   tensorflow-cpu
     #   tensorflow-intel
 slicer==0.0.7
     # via shap
@@ -601,16 +631,20 @@ tensorboard==2.16.2
     #   tensorflow-intel
 tensorboard-data-server==0.7.2
     # via tensorboard
-tensorflow==2.16.2
+tensorflow-cpu==2.16.2
     # via -r requirements.in
 tensorflow-intel==2.16.2
-    # via tensorflow
+    # via tensorflow-cpu
 termcolor==3.1.0
-    # via tensorflow-intel
+    # via
+    #   tensorflow-cpu
+    #   tensorflow-intel
 threadpoolctl==3.6.0
     # via scikit-learn
 tifffile==2025.5.24
     # via scikit-image
+tokenizers==0.21.1
+    # via transformers
 toml==0.10.2
     # via streamlit
 torch==2.7.0
@@ -618,6 +652,9 @@ torch==2.7.0
     #   -r requirements.in
     #   accelerate
     #   stable-baselines3
+    #   torchdiffeq
+torchdiffeq==0.2.5
+    # via -r requirements.in
 tornado==6.5.1
     # via streamlit
 tqdm==4.67.1
@@ -632,6 +669,9 @@ tqdm==4.67.1
     #   optuna
     #   prophet
     #   shap
+    #   transformers
+transformers==4.52.3
+    # via -r requirements.in
 typing-extensions==4.13.2
     # via
     #   aioredis
@@ -686,6 +726,7 @@ wheel==0.45.1
 wrapt==1.17.2
     # via
     #   deprecated
+    #   tensorflow-cpu
     #   tensorflow-intel
 zipp==3.21.0
     # via importlib-metadata
