--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install -r requirements-dev.txt
+        # Install from the new split requirements files
+        pip install -r requirements/base.txt
+        pip install -r requirements/cognitive.txt
+        pip install -r requirements/heavy.txt
+        pip install -r requirements/dev.txt
     
     - name: Lint with flake8
       run: |
