fix(deps): Update ipython, adjust CI for quality checks
Updated ipython version in requirements/dev.in for broader Python compatibility. Ensured CI/quality workflows use appropriate Python versions (>=3.10) and correct requirement files. Recompiled all requirements/*.txt files.

--- a/requirements/dev.in
+++ b/requirements/dev.in
@@ -19,6 +19,7 @@ sphinx-autodoc-typehints>=1.19.0
 jupyter>=1.0.0
 jupyterlab>=3.4.0
 notebook>=6.4.0
+ipython>=8.14.0,<9.0.0 # For wider Python compatibility (e.g. Py3.10)
 
 # For managing requirements
 pip-tools
